--- a/extremes/thordans-reign.yaml
+++ b/extremes/thordans-reign.yaml
@@ -15,8 +15,8 @@ description: |
 status:
   vuln:
     id: 1789
-    duration: 119650
     type: vuln
+    duration: 119650
   physical-vuln:
     id: 934
     type: vuln
@@ -93,12 +93,14 @@ status:
     description: "Shielded by a holy knight and impervious to damage."
   hp-penalty:
     id: 1089
+    type: impairment
+    description: Reduces maximum health.
 actions:
   ascalons-might:
     id: 35261
-    damage: 41415
     mechanic: tb.mt
     shape: cone
+    damage: 41415
     description: Untelegraphed tankbuster on the main target.
   meteorain:
     id: 35267
@@ -127,27 +129,27 @@ actions:
     description: Inflicts [s:hysteria] on any player looking at [boss] at the end of the cast.
   lightning-storm:
     id: 35265
-    damage: 27081
     mechanic: spread
     shape: chariot
+    damage: 27081
     count: 8
     description: Strikes all players with lightning.
     resolve: Spread out to minimize damage.
   the-dragons-rage:
     id: 35274
-    damage: 38602
     mechanic: stack.party
     shape: chariot
+    damage: 38602
     description: A telegraphed [m:stack.party] on a random player.
   ancient-quaga:
     id: 35268
-    damage: 36340
     mechanic: raidwide
+    damage: 36340
     description: Standard raidwide.
   heavenly-heel:
     id: 35270
-    damage: 82995
     mechanic: tb.mt
+    damage: 82995
     description: Stomps the main target, dealing heavy damage.
   knights-1:
     name: Charibert and Hermenost
@@ -165,15 +167,16 @@ actions:
         id: conviction
   holy-chain:
     id: 35308
-    damage: 10945
     mechanic: mech.failure
+    damage: 10945
+    players: 2
     description: The [s:burning-chains] continuously explode, dealing some damage with each explosion.
   heavensflame:
     id: 35306
     mechanic: aoe.baitable
     shape: chariot
-    description: Summons a series of fire [t:AoE]s under random players.
     count: 3
+    description: Summons a series of fire [t:AoE]s under random players.
     resolve: Move out of the AoEs as they appear.
     children:
       - at: 489
@@ -192,14 +195,15 @@ actions:
     description: A set of fire [t:AoE]s summoned by [a:heavensflame] detonates.
   conviction:
     id: 35292
-    damage: 3830
     mechanic: towers.single
+    damage: 3830
     count: 4
     description: A tower resolves, dealing minimal damage to anyone inside. If no one is inside, casts [a:eternal-conviction] instead.
   eternal-conviction:
     id: 35293
-    damage: 26395
     mechanic: mech.failure
+    damage: 26395
+    players: 8
     description: A tower explodes, dealing massive damage and inflicting [s:paralysis] on all party members.
   knights-2:
     name: Zephirin and others
@@ -224,8 +228,8 @@ actions:
       id: spiral-thrust-x3
   sacred-cross:
     id: 35279
-    damage: 40000
     mechanic: raidwide
+    damage: 40000
     description: |
       Ser Zephirin casts [a:sacred-cross]. When he finishes the cast, deals twice Ser Zephirin's remaining health percentage to all party members relative to your maximum health.
       So, for instance, if you have 47,000 max HP and your tanks have 60,000 max HP, the attack will deal 120,000 damage to tanks and 94,000 damage to everyone else if you don't damage Ser Zephirin at all. This means that the attack becomes survivable after damaging Ser Zephirin to roughly 50% health with sufficient mitigation and/or shields.
@@ -301,8 +305,8 @@ actions:
   holy-bladedance:
     id: 35285
     mechanic: tb.mt
-    description: A heavy six-hit tankbuster. Note that the [t:snapshot] for *all six hits* happens at the end of the cast, so any mitigation or shields must be applied before then.
     compact: full
+    description: A heavy six-hit tankbuster. Note that the [t:snapshot] for *all six hits* happens at the end of the cast, so any mitigation or shields must be applied before then.
     resolve: If the caster is under the effect of [s:damage-up] (from [s:sword-of-the-heavens]), requires *significant* mitigation or [t:invuln]s.
     children:
       - at: 0
@@ -325,19 +329,19 @@ actions:
     description: One out of six tankbuster hits.
   skyward-leap:
     id: 35304
-    damage: 36795
     mechanic: raidwide.proximity
+    damage: 36795
     description: A player is marked with a blue dive marker. After a short time, a knight dives on them, dealing heavy damage to them and proximity damage to everyone else (relative to how close they were to the dived player).
     resolve: Each dived player should get away from the party.
   heavenly-slash:
     id: 35283
-    damage: 20947
     mechanic: tb.mt
+    damage: 20947
     description: Untelegraphed tankbuster. Is always used alongside an auto-attack.
   holiest-of-holy:
     id: 35284
-    damage: 19454
     mechanic: raidwide
+    damage: 19454
     description: Standard knight raidwide.
   knights-4:
     name: All Knights
@@ -370,15 +374,15 @@ actions:
       id: faith-unmoving
   hiemal-storm:
     id: 35310
-    damage: 24580
     mechanic: spread
     shape: chariot
+    damage: 24580
     description: Telegraphed [t:AoE] on random players that deals  damage and leaves behind a frost puddle. Staying in this puddle for too long inflicts [s:frostbite].
   spiral-pierce:
     id: 35302
-    damage: 36567
     mechanic: spread
     shape: line
+    damage: 36567
     description: A knight tethers to a random player and, after some time, dashes towards them, dealing high damage. Anyone else in the path of the dash is knocked into the wall and killed.
   dimensional-collapse:
     id: 35288
@@ -389,8 +393,8 @@ actions:
       After spawning the AoEs, Ser Grinnaux gradually gains stacks of [s:area-of-influence]. At [s:area-of-influence:6] he finishes the cast and the AoEs resolve.
   faith-unmoving:
     id: 35290
-    damage: 6155
     mechanic: mech.knockback
+    damage: 6155
     description: A knockback from Ser Grinnaux. Be aware that this ability has no cast bar.
     resolve: Get close to Ser Grinnaux and aim yourself away from the [a:hiemal-storm] puddles, to avoid getting [s:frostbite].
   holy-meteor:
@@ -421,28 +425,30 @@ actions:
       timing: push
   comet:
     id: 35316
-    damage: 6000
     mechanic: spread
     shape: chariot
+    damage: 6000
     description: Marks a player with a red marker, then drops 4 consecutive comets on their head, each dealing moderate damage to them and anyone nearby.
     resolve: The damage cannot be avoided, but you should avoid stacking with other players so you don't hit them too. While one series of comets is rarely lethal, healers should still pay attention and top players off if they notice their health getting low.
   heavy-impact:
     id: 35295
-    damage: 29401
     mechanic: aoe.expanding.rings
-    players: 0
     shape: 270°
+    damage: 29401
+    players: 0
     description: A 270° arc that hits multiple times in a row. Each time the arc is bigger and farther from the origin of the attack.
     resolve: Step into the 90° cone that is safe from the AoE, or step into an AoE explosion after it has gone off.
   comet-impact:
     id: 35314
-    damage: 29227
     mechanic: mech.failure
+    damage: 29227
+    players: 8
     description: A Comet Circle was not destroyed in time and its comet reached the ground. Deals high raidwide damage.
   meteor-impact:
     id: 35315
-    damage: 9999999
     mechanic: mech.failure
+    damage: 9999999
+    players: 8
     description: The Meteor Circle was not destroyed in time and its meteor reached the ground. Instantly kills all party members.
   the-light-of-ascalon:
     id: 35278
@@ -467,8 +473,8 @@ actions:
         id: the-light-of-ascalon-hit
   the-light-of-ascalon-hit:
     id: 35278
-    damage: 1300
     mechanic: raidwide
+    damage: 1300
     description: Deals minimal damage and inflicts a small knockback on all players.
   ultimate-end:
     id: 35277
@@ -606,13 +612,13 @@ actions:
   holy-shield-bash:
     id: 35286
     mechanic: mech.status
-    description: A random healer receives a green marker. Shortly thereafter two knights charge at them, inflicting [s:down-for-the-count] and [s:magic-vuln:2].
     damage: 0
+    description: A random healer receives a green marker. Shortly thereafter two knights charge at them, inflicting [s:down-for-the-count] and [s:magic-vuln:2].
   spear-of-the-fury:
     id: 35281
-    damage: 36000
     mechanic: stack.intercept
     shape: line
+    damage: 36000
     description: |
       Ser Zephirin throws an aetheric spear at the healer who is [s:down-for-the-count], intending to inflict upon them the same fate as poor Haurchefant.
       This attack splits damage between all players hit, reducing damage to survivable levels. The first player hit takes drastically increased damage (about twice as much as everyone else) and is inflicted with [s:physical-vuln].
@@ -626,8 +632,8 @@ actions:
     description: Anyone looking at the dragon eye on the outside of the arena is inflicted with [s:hysteria] and [s:vuln].
   heavensward-leap:
     id: 35305
-    damage: 19448
     mechanic: raidwide
+    damage: 19448
     description: A knight dives onto a random party member, dealing moderate raidwide damage.
   knightly-cover:
     name: Heaven's Cover
@@ -638,13 +644,13 @@ actions:
       While Ser Zephirin is tethered to [boss], [boss] is invulnerable.
   pure-of-soul:
     id: 35312
-    damage: 43448
     mechanic: raidwide
+    damage: 43448
     description: Ser Charibert engulfs the arena in flames for heavy raidwide damage.
   absolute-conviction:
     id: 35300
-    damage: 41680
     mechanic: raidwide
+    damage: 41680
     description: The knights call down lightning from the heavens for heavy raidwide damage.
   ancient-quaga-enrage:
     id: 35269
