Fix description error on Beeloved Venom Alpha

--- a/enums/common.yaml
+++ b/enums/common.yaml
@@ -118,6 +118,9 @@ status:
 
   # Other
   ten-chi-jin: 1186
+
+  # Debuffs
   damage-down: 2911
   weakness: 43
   brink-of-death: 44
+  paralysis: 17
