Add missing Octoboom Bombarian Special

--- a/raids/r3s.yaml
+++ b/raids/r3s.yaml
@@ -769,6 +769,9 @@ timeline:
   - at: 372357
     id: doping-draught-2
   - at: 391703
+    id: octoboom-bombarian-special
+    link: or
+  - at: 391703
     id: quadroboom-bombarian-special
   - at: 427545
     id: fuses-of-fury
