--- a/enums/status-types.yaml
+++ b/enums/status-types.yaml
@@ -27,7 +27,10 @@ damage-up:
   description: Increases all damage dealt.
 rot:
   name: rot
-  description: A status effect that can be passed to other players by walking into them. The original player keeps the status effect when passed. Named after [s:333], a mechanic in The Binding Coil of Bahamut - Turn 2.
+  description: A status effect that can be passed to other players by walking into them. The original player keeps the status effect when passed. Named after [s:333], a mechanic in The Binding Coil of Bahamut - Turn 2. Often triggers some kind of effect when the status expires.
 rot.pass:
   name: rot
-  description: A status effect that can be passed to other players by walking into them. The original player loses the status effect when passed. Named after [s:333], a mechanic in The Binding Coil of Bahamut - Turn 2.
+  description: A status effect that can be passed to other players by walking into them. The original player loses the status effect when passed. Named after [s:333], a mechanic in The Binding Coil of Bahamut - Turn 2. Often triggers some kind of effect when the status expires.
+rot.immunity:
+  name: rot immunity
+  description: A status effect that renders the player unable to have another [t:rot] effect passed to them. Is usually inflicted after passing their rot status effect to another player, to prevent repeatedly passing it back and forth.
