Add 7.18 and 7.2 release dates

--- a/calendar.yaml
+++ b/calendar.yaml
@@ -675,3 +675,10 @@
   url: https://sqex.to/0It7V
   from: 2025-02-03 08:00:00
   to: 2025-02-17 14:59:59
+- name: Patch 7.18
+  type: patch
+  at: 2025-02-25 10:00:00
+- name: Patch 7.2 (predicted release)
+  short: Patch 7.2
+  type: patch
+  at: 2025-03-25 10:00:00
